--- a/emacs.org
+++ b/emacs.org
@@ -1481,6 +1481,14 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
     (find-file jw-org-todo-file)
     (cd (getenv "HOME"))))
 
+(defun jw-org-capture ()
+  (interactive)
+  (if (fboundp 'counsel-org-capture) (counsel-org-capture) (org-capture)))
+
+(defun jw-todo-or-catpure (arg)
+  (interactive "P")
+  (if arg (jw-org-capture) (jw-todo)))
+
 (defun jw-todo-backup (arg)
   (interactive "P")
   (jw--run-cmd "todo-backup"
@@ -1551,11 +1559,10 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
 
 (add-hook 'org-babel-after-execute-hook 'org-display-inline-images)
 
-(define-key jw-keymap (kbd "o") 'jw-todo)
+(define-key jw-keymap (kbd "o") 'jw-todo-or-catpure)
 (define-key jw-keymap (kbd "O") 'jw-todo-backup)
 (define-key jw-keymap (kbd "a") 'org-agenda)
 (define-key jw-keymap (kbd "A") 'jw-org-agenda)
-(define-key jw-keymap (kbd "c") 'org-capture)
 (define-key ctl-x-4-map (kbd "'") 'jw-toggle-org-src-window-setup)
 (add-hook 'org-mode-hook (lambda ()
                            (local-set-key (kbd "C-c <") 'org-time-stamp)
