--- a/emacs.org
+++ b/emacs.org
@@ -58,10 +58,10 @@ This is a fix for http://elpa.gnu.org/packages/gnu-elpa-keyring-update.html. Can
 
 (use-package helpful
   :config (progn
-            (defalias 'describe-key 'helpful-key)
-            (defalias 'describe-function 'helpful-callable)
-            (defalias 'describe-variable 'helpful-variable)
-            (defalias 'describe-symbol 'helpful-symbol)))
+            (fset 'describe-key 'helpful-key)
+            (fset 'describe-function 'helpful-callable)
+            (fset 'describe-variable 'helpful-variable)
+            (fset 'describe-symbol 'helpful-symbol)))
 
 (use-package magit) ;; brings in transient
 (use-package transient)
