--- a/emacs.org
+++ b/emacs.org
@@ -1903,9 +1903,14 @@ very opinionated project development lifecycle commands, an alternative to proje
 (defun jw-runbook-run-last-command (arg) (interactive "P") (jw-runbook--find-and-run-function "last-command" arg))
 (defun jw-runbook-run-repl (arg) (interactive "P") (jw-runbook--find-and-run-function "repl" arg))
 (defun jw-runbook-run-cleanup (arg) (interactive "P") (jw-runbook--find-and-run-function "cleanup" arg))
+
 (defun jw-runbook-run-shell-command (arg) (interactive "P") (jw-runbook--find-and-run-function "shell-command" arg))
 (defun jw-runbook-run-eshell (arg) (interactive "P") (jw-runbook--find-and-run-function "eshell" arg))
+
 (defun jw-runbook-run-open-jenkins (arg) (interactive "P") (jw-runbook--find-and-run-function "open-jenkins" arg))
+(defun jw-runbook-run-env-stage (arg) (interactive "P") (jw-runbook--find-and-run-function "env-stage" arg))
+(defun jw-runbook-run-env-uat (arg) (interactive "P") (jw-runbook--find-and-run-function "env-uat" arg))
+(defun jw-runbook-run-env-prod (arg) (interactive "P") (jw-runbook--find-and-run-function "env-prod" arg))
 
 (setq jw-runbook-keymap (make-sparse-keymap))
 
@@ -1933,29 +1938,36 @@ very opinionated project development lifecycle commands, an alternative to proje
 (define-key jw-runbook-keymap (kbd "!") 'jw-runbook-run-shell-command)
 (define-key jw-runbook-keymap (kbd "e") 'jw-runbook-run-eshell)
 
-(define-key jw-runbook-keymap (kbd "j") 'jw-runbook-run-open-jenkins)
+(define-key jw-runbook-keymap (kbd "jj") 'jw-runbook-run-open-jenkins)
+(define-key jw-runbook-keymap (kbd "j1") 'jw-runbook-run-env-stage)
+(define-key jw-runbook-keymap (kbd "j2") 'jw-runbook-run-env-uat)
+(define-key jw-runbook-keymap (kbd "j3") 'jw-runbook-run-env-prod)
 
+;; NOTE: prefix args in magit/transient menus are voided out for multi-key shortcuts. :-(
 (transient-define-prefix jw-runbook-menu ()
   ["Runbook"
-   ("I" "install        install development dependencies" jw-runbook-run-install)
-   ("s" "start          start development dependencies & server locally" jw-runbook-run-start)
-   ("r" "run            run app locally" jw-runbook-run-run)
-   ("c" "compile        run compile function" jw-runbook-run-compile)
-   ("C" "test-compile   run test-compile function" jw-runbook-run-test-compile)
-   ("t" "test           run all tests" jw-runbook-run-test)
-   ("o" "test-only      run specific test" jw-runbook-run-test-only)
-   ("L" "lint           run lint" jw-runbook-run-lint)
-   (":" "command        arbitrary build command" jw-runbook-run-command)
-   ("l" "last-command   run the last command" jw-runbook-run-last-command)
-   ("K" "cleanup        kill project dev & process buffers" jw-runbook-run-cleanup)
-   ("$" "repl           open project language's repl" jw-runbook-run-repl)
+   ("I" "install         install development dependencies" jw-runbook-run-install)
+   ("s" "start           start development dependencies & server locally" jw-runbook-run-start)
+   ("r" "run             run app locally" jw-runbook-run-run)
+   ("c" "compile         run compile function" jw-runbook-run-compile)
+   ("C" "test-compile    run test-compile function" jw-runbook-run-test-compile)
+   ("t" "test            run all tests" jw-runbook-run-test)
+   ("o" "test-only       run specific test" jw-runbook-run-test-only)
+   ("L" "lint            run lint" jw-runbook-run-lint)
+   (":" "command         arbitrary build command" jw-runbook-run-command)
+   ("l" "last-command    run the last command" jw-runbook-run-last-command)
+   ("K" "cleanup         kill project dev & process buffers" jw-runbook-run-cleanup)
+   ("$" "repl            open project language's repl" jw-runbook-run-repl)
    ]
   ["Shell"
-   ("!" "cmd-dwim       shell command in project root" jw-runbook-run-shell-command)
-   ("e" "eshell         eshell in project root" jw-runbook-run-eshell)
+   ("!" "cmd-dwim        shell command in project root" jw-runbook-run-shell-command)
+   ("e" "eshell          eshell in project root" jw-runbook-run-eshell)
    ]
   ["Deployment"
-   ("j" "open-jenkins   open jenkins job in web browser" jw-runbook-run-open-jenkins)
+   ("jj" "open-jenkins   open jenkins job in web browser" jw-runbook-run-open-jenkins)
+   ("j1" "env-stage      open dev/stage app environment" jw-runbook-run-env-stage)
+   ("j2" "env-uat        open uat/qa app environment" jw-runbook-run-env-uat)
+   ("j3" "env-prod       open prod app environment" jw-runbook-run-env-prod)
    ])
 
 (defun jw-runbook-menu-open (&optional dir)
@@ -1975,7 +1987,9 @@ very opinionated project development lifecycle commands, an alternative to proje
  'counsel-projectile-switch-project
  '(("C-cs" counsel-projectile-switch-project--jw-runbook-menu-action "jw-runbook")))
 
-(cl-defun jw-runbook-setup (&key runbook-type runbook-name install start run compile test-compile test test-only lint command last-command repl shell-command eshell cleanup open-jenkins)
+(cl-defun jw-runbook-setup (&key runbook-type runbook-name install start run compile test-compile test test-only lint command last-command repl
+                                 shell-command eshell cleanup
+                                 open-jenkins env-stage env-uat env-prod)
   (declare (indent defun))
   (if (and (not runbook-type) (not runbook-name))
       (message "jw-runbook-setup called without neither type nor name configuration")
@@ -1999,8 +2013,11 @@ very opinionated project development lifecycle commands, an alternative to proje
       (when shell-command (fset (intern (format "jw-runbook-run-shell-command:%s:%s" namespace func-name-suffix)) shell-command))
       (when eshell (fset (intern (format "jw-runbook-run-eshell:%s:%s" namespace func-name-suffix)) eshell))
 
-      (when open-jenkins (fset (intern (format "jw-runbook-run-open-jenkins:%s:%s" namespace func-name-suffix)) open-jenkins))))
-  )
+      (when open-jenkins (fset (intern (format "jw-runbook-run-open-jenkins:%s:%s" namespace func-name-suffix)) open-jenkins))
+      (when env-stage (fset (intern (format "jw-runbook-run-env-stage:%s:%s" namespace func-name-suffix)) env-stage))
+      (when env-uat (fset (intern (format "jw-runbook-run-env-uat:%s:%s" namespace func-name-suffix)) env-uat))
+      (when env-prod (fset (intern (format "jw-runbook-run-env-prod:%s:%s" namespace func-name-suffix)) env-prod))
+      )))
 
 (defun jw-runbook-run-shell-command:default (arg) (cmd-dwim arg))
 (defun jw-runbook-run-eshell:default (arg) (eshell-dwim nil))
