better nodejs repl

--- a/emacs.org
+++ b/emacs.org
@@ -109,6 +109,8 @@ This is a fix for http://elpa.gnu.org/packages/gnu-elpa-keyring-update.html. Can
 (use-package editorconfig
   :config (editorconfig-mode 1))
 
+(use-package nodejs-repl)
+
 (use-package yaml-mode)
 
 (use-package markdown-mode
@@ -2177,7 +2179,7 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
   :lint (lambda (arg) (jw-js-command arg "lint"))
   :command (lambda (arg) (jw-js-command arg))
   :last-command (lambda (arg) (jw-js-run-raw-command arg jw-js--last-command-global))
-  :repl (lambda (arg) (jw-js-run-raw-command arg "node"))
+  :repl (lambda (arg) (nodejs-repl))
   :cleanup (lambda (arg)
              (if (jw-js--binci-p)
                  (jw--run-cmd "binci --cleanup"
