--- a/emacs.org
+++ b/emacs.org
@@ -2112,6 +2112,7 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
 ** javascript
 
 #+BEGIN_SRC emacs-lisp
+(require 'js)
 (require 'json)
 (require 'yaml)
 
@@ -2185,6 +2186,24 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
                  (jw--run-cmd "binci --cleanup"
                               :after-process-finish (lambda (arg) (projectile-kill-buffers)))
                (projectile-kill-buffers))))
+
+(defun nodejs-repl-send-region-or-buffer ()
+  (interactive)
+  (if (region-active-p)
+      (nodejs-repl-send-region (region-beginning) (region-end))
+    (nodejs-repl-send-buffer)))
+
+(define-key js-mode-map (kbd "C-c M-:") nil) ;; remove default js-eval
+(define-key js-mode-map (kbd "C-M-x") nil) ;; remove default js-eval-defun
+(define-key js-mode-map (kbd "C-c C-j") nil) ;; remove js-set-js-context
+
+(define-key js-mode-map (kbd "C-x C-e") 'nodejs-repl-send-last-expression)
+(define-key js-mode-map (kbd "C-c C-j") 'nodejs-repl-send-line)
+(define-key js-mode-map (kbd "C-c C-r") 'nodejs-repl-send-region)
+(define-key js-mode-map (kbd "C-c C-c") 'nodejs-repl-send-region-or-buffer)
+(define-key js-mode-map (kbd "C-c C-l") 'nodejs-repl-load-file)
+(define-key js-mode-map (kbd "C-c C-z") 'nodejs-repl-switch-to-repl)
+
 #+END_SRC
 
 support typescript in org babel
